starting to make site for package

--- a/summarizer.css
+++ b/summarizer.css
@@ -1,3 +1,7 @@
+.json-summary-block {
+    background: var(--solarized-base3);
+}
+
 .json-summary {
     font-family: monospace;
 }
@@ -125,20 +129,20 @@
 
 :root {
     /* using colors from the solarized light theme */
-    --summary-base03:    #002b36;
-    --summary-base02:    #073642;
-    --summary-base01:    #586e75;
-    --summary-base00:    #657b83;
-    --summary-base0:     #839496;
-    --summary-base1:     #93a1a1;
-    --summary-base2:     #eee8d5;
-    --summary-base3:     #fdf6e3;
-    --summary-yellow:    #b58900;
-    --summary-orange:    #cb4b16;
-    --summary-red:       #dc322f;
-    --summary-magenta:   #d33682;
-    --summary-violet:    #6c71c4;
-    --summary-blue:      #268bd2;
-    --summary-cyan:      #2aa198;
-    --summary-green:     #859900;
+    --solarized-base03:    #002b36;
+    --solarized-base02:    #073642;
+    --solarized-base01:    #586e75;
+    --solarized-base00:    #657b83;
+    --solarized-base0:     #839496;
+    --solarized-base1:     #93a1a1;
+    --solarized-base2:     #eee8d5;
+    --solarized-base3:     #fdf6e3;
+    --solarized-yellow:    #b58900;
+    --solarized-orange:    #cb4b16;
+    --solarized-red:       #dc322f;
+    --solarized-magenta:   #d33682;
+    --solarized-violet:    #6c71c4;
+    --solarized-blue:      #268bd2;
+    --solarized-cyan:      #2aa198;
+    --solarized-green:     #859900;
 }
