--- a/summarizer.css
+++ b/summarizer.css
@@ -1,5 +1,5 @@
-.json-summary-block {
-    background: var(--solarized-base3);
+.json-summary-wrapper {
+    white-space: pre-wrap;
 }
 
 .json-summary {
@@ -34,10 +34,10 @@
   top: 0;
   left: 0;
   font-size: 12px;
-  height: 10px;
-  width: 10px;
+  height: 12px;
+  width: 12px;
 
-  line-height: 10px;
+  line-height: 12px;
   text-align: center;
 
   color: var(--solarized-base1);
