--- a/docs/main.css
+++ b/docs/main.css
@@ -5,11 +5,15 @@ body {
   flex-direction: column;
   align-items: center;
 
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #content {
   text-align: left;
+}
+
+.title, .data {
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .data {
