add some more tests, work to improve documentation more

--- a/docs/main.css
+++ b/docs/main.css
@@ -146,3 +146,9 @@ h3 {
 .table-header th {
   border-bottom: 1px solid black;
 }
+
+.dropzone {
+  border: 2px dashed #0087F7;
+  border-radius: 5px;
+  background: white;
+}
