--- a/style/colors.scss
+++ b/style/colors.scss
@@ -16,7 +16,7 @@ $solarized-blue: #268bd2;
 $solarized-cyan: #2aa198;
 $solarized-green: #859900;
 
-// colors from atom one dark (?) editor theme
+// colors from one dark (?) editor theme
 $snippets-darkgray: #282c34;
 $snippets-lightgray: #abb2bf;
 $snippets-yellow: #e5c07b;
@@ -39,14 +39,14 @@ $no-pink: #c792ea;
 
 // colors from monokai theme
 $monokai-dark: #272822;
-$monokai-green: rgb(166, 226, 46);
-$monokai-yellow: rgb(230, 219, 116);
-$monokai-cyan: rgb(102, 217, 239);
-$monokai-orange: rgb(253, 151, 31);
-$monokai-red: rgb(249, 38, 114);
+$monokai-green: #a9dc76;
+$monokai-yellow: #ffd866;
+$monokai-cyan: #78dce8;
+$monokai-orange: #fc9867;
+$monokai-red: #ff6188;
 $monokai-gray: rgb(117, 113, 94);
 $monokai-white: rgb(248, 248, 242);
-$monokai-purple: rgb(174, 129, 255);
+$monokai-purple: #ab9df2;
 
 // from abyss color theme
 $abyss-green: #22aa44;
